fix(widgets): fix overflow of the text container

--- a/src/widgets/request-participant-card/ui/request-participant-card.module.scss
+++ b/src/widgets/request-participant-card/ui/request-participant-card.module.scss
@@ -147,6 +147,7 @@
 		letter-spacing: 0.25px;
 		margin: 0;
 		font-family: $--open-sans-font;
+		word-break: break-all;
 	}
 }
 .menuIcon {
